# collective

./: .gitignore  Cargo.toml  README.md  frontmatter.json  log4rs.yml
app/content/: index.md
app/content/blogposts/: 2023-02-22-Example_Blogpost.md
app/static/: test.html
app/templates/: base.tera  index.html  index.tera
collective-rs/: .gitignore  Cargo.toml
collective-rs/app/content/: index.md
collective-rs/app/templates/errors/: not_found.html
collective-rs/src/: main.rs
collective-rs/src/templates/: mod.rs
resources/: collective_favicon.xcf  collective_favicon_layers.xcf
src/: app.rs  blog.rs  main.rs  markdown.rs  routes.rs  views.rs
src/markdown/: mod.rs
src/routes/: blog.rs  mod.rs  projects.rs
src/templates/: mod.rs
static/css/: collective.css
templates/: base.html  blogpost.html  index.html
templates/components/: header.html
