[package]
name = "collective"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
chrono = "0.4.23"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9.2"
tera = "1.17.1"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
